<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social chat app</string>
    <string name="action_settings">Settings</string>
    <string name="logon">Log on</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="status_text">Status text</string>
    <string name="login_form">Login form</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="account">Account</string>

    <!-- Parse -->
    <string name="facebook_app_id">892893444125788</string>

    <!-- Login app -->
    <string name="type_msg">Type message</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="to">To:</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>

    <!-- self made for app -->
    <string name="title_activity_user">UserActivity</string>
    <string name="chat">Chat</string>
    <string name="title_activity_user_list">UserList</string>
    <string name="logout">Log out</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_reset_password">Reset password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_pw_description">Type in your email in the field below.</string>
    <string name="err_reset_pw">Error occurred while resetting password:</string>

    <!-- Transition strings -->
    <string name="transition_username">transitionUsername</string>
    <string name="transition_password">transitionPassword</string>
    <string name="sign_into_account">Sign in or register your account</string>
    <string name="register_account">Register your account</string>
    <string name="title_activity_chat">Chat</string>
    <string name="write_a_message">Write a message ...</string>
    <string name="send_message">Send</string>
    <string name="message">Message</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="recent_chat">Recent chat</string>

    <!-- Navigation Drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_new_user_chat">NewUserChat</string>
    <string name="message_date_time">datetime</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_learned_drawer">UserLearnedDrawer</string>
    <string name="profile">Profile</string>
    <string name="title_activity_user_edit_act">UserEdit_act</string>
    <string name="title_activity_profile_act">Profile_act</string>
    <string name="title_activity_navigation_drawer_test">NavigationDrawerTest</string>
    <string name="drawer_sub_header">Subheader</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="title_activity_login2_act">Login2_act</string>
    <string name="email_reset_password">Enter e-mail address here</string>
    <string name="title_activity_startup_act">Startup_act</string>
    <string name="title_activity_public_profile_act">PublicProfile_act</string>
    <string name="title_activity_edit_profile_act">EditProfile_act</string>
    <string name="title_activity_find_friends_act">FindFriends_act</string>
</resources>
