<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/PrimaryLinearLayoutLoginStyle">

            <include
                android:id="@+id/toolbar_teal"
                layout="@layout/toolbar_teal" />

            <LinearLayout
                style="@style/PrimaryLinearLayoutLoginStyle"
                android:layout_margin="10dp"
                tools:context=".MainActivity">

                <LinearLayout
                    style="@style/SubLinearLayoutLoginStyle"
                    android:layout_margin="5dp">

                    <View style="@style/bigDivider" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/ResetPasswordDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reset_pw_description"/>

                        <ImageView
                            android:id="@+id/UsernameImage"
                            style="@style/ImageViewLoginStyle"
                            android:layout_alignBottom="@+id/Email"
                            android:layout_below="@+id/ResetPasswordDescription"
                            android:src="@drawable/ic_account_box_grey600_24dp" />

                        <EditText
                            android:id="@+id/Email"
                            style="@style/EditTextLoginStyle"
                            android:layout_toRightOf="@+id/UsernameImage"
                            android:layout_below="@+id/ResetPasswordDescription"
                            android:hint="@string/email">

                            <requestFocus />
                        </EditText>
                    </RelativeLayout>
                </LinearLayout>
                <View style="@style/TextFieldDivider" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <Button
                        android:id="@+id/Register"
                        style="@style/ButtonRaisedLoginStyle"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/selector"
                        android:onClick="resetPassword"
                        android:text="@string/reset_password" />
                </RelativeLayout>

                <View style="@style/DividerSmallLineLightThemeStyle" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee" />
</android.support.v4.widget.DrawerLayout>
