<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_linear_layout"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/toolbar_teal"
            layout="@layout/toolbar_teal" />

        <RelativeLayout
            android:id="@+id/view_group"
            style="@style/RelativeLayoutSubHeaderDesignStyle"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/pad_16dp"
            android:layout_marginRight="@dimen/pad_16dp"
            android:background="@color/white">

            <TextView
                style="@style/TextViewSubHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sign_into_account" />
        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/pad_16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/UsernameImage"
                        style="@style/ImageViewLoginStyle"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/username"
                        android:src="@drawable/ic_person_grey600_24dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/username_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/pad_72dp"
                        android:layout_marginRight="@dimen/pad_16dp"
                        android:orientation="vertical"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/Username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:textSize="@dimen/txt_16sp"
                            android:singleLine="true"
                            android:maxLength="140"
                            android:transitionName="@string/transition_username">
                            <requestFocus />
                        </EditText>
                    </android.support.design.widget.TextInputLayout>
                    <!--<TextView-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:id="@+id/counter"-->
                        <!--android:layout_gravity="end"-->
                        <!--android:layout_below="@+id/username_textinput"-->
                        <!--android:visibility="gone"/>-->
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/PasswordImage"
                        style="@style/ImageViewLoginStyle"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/password"
                        android:src="@drawable/ic_lock_grey600_24dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/pad_72dp"
                        android:layout_marginRight="@dimen/pad_16dp"
                        android:orientation="vertical"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/txt_16sp"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:singleLine="true"
                            android:transitionName="@string/transition_username" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/login_buttons"
                    style="@style/RelativeLayoutInnerDesignStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/pad_72dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/pad_72dp"
                    android:layout_marginTop="@dimen/pad_8dp">

                    <Button
                        android:id="@+id/Login"
                        style="@style/ButtonRaisedLoginStyle"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_toStartOf="@+id/Register"
                        android:onClick="LoginPressed"
                        android:text="@string/login" />

                    <Button
                        android:id="@+id/Register"
                        style="@style/ButtonRaisedWhiteLoginStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:onClick="RegisterPressed"
                        android:text="Register account" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:layout_gravity="bottom"

                    android:orientation="vertical">

                    <View style="@style/divider_margin_bot" />

                    <Button
                        style="@style/ButtonFlatLoginStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="end"
                        android:onClick="ForgotPassword"
                        android:text="@string/forgot_password" />

                    <View style="@style/divider_margin_top" />

                    <!--<View style="@style/divider" />-->
                </LinearLayout>
            </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.DrawerLayout>