<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_300"
        android:fitsSystemWindows="true">
        <!--<ImageView-->
            <!--android:id="@+id/background_image"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:alpha="1"-->
            <!--android:contentDescription="image_background"-->
            <!--android:fitsSystemWindows="true" />-->

        <TextView
            android:id="@+id/main_login_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Social chat application"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_login_screen_title"
            android:layout_marginTop="@dimen/pad_16dp">

            <TextView
                android:id="@+id/connect_with_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-regular"
                android:text="Connect with friends"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/connect_with_friends"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-regular"
                android:text="Join now"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="126dp"
            android:layout_marginEnd="@dimen/pad_16dp"
            android:layout_marginStart="@dimen/pad_16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/pad_72dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/UsernameImage"
                    style="@style/ImageViewLoginStyle"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/username"
                    android:src="@drawable/ic_person_grey600_24dp" />
                <!-- http://www.google.com/design/spec/components/text-fields.html#text-fields-floating-labels -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_textinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/pad_16dp"
                    android:layout_marginStart="@dimen/pad_72dp"
                    android:orientation="vertical"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/Username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/username"
                        android:maxLength="140"
                        android:singleLine="true"
                        android:textSize="@dimen/txt_16sp"
                        android:transitionName="@string/transition_username">

                        <!--<requestFocus />-->
                    </EditText>
                </android.support.design.widget.TextInputLayout>
                <!--<TextView-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:id="@+id/counter"-->
                <!--android:layout_gravity="end"-->
                <!--android:layout_below="@+id/username_textinput"-->
                <!--android:visibility="gone"/>-->
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/pad_72dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/PasswordImage"
                    style="@style/ImageViewLoginStyle"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/password"
                    android:src="@drawable/ic_lock_grey600_24dp" />
                <!-- http://www.google.com/design/spec/components/text-fields.html#text-fields-floating-labels -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_textinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/pad_16dp"
                    android:layout_marginStart="@dimen/pad_72dp"
                    android:orientation="vertical"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/txt_16sp"
                        android:transitionName="@string/transition_username" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/login_buttons"
                style="@style/RelativeLayoutInnerDesignStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Login"
                    style="@style/ButtonLoginStyle"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_margin="0dp"
                    android:onClick="LoginPressed"
                    android:text="Sign in" />

                <Button
                    android:id="@+id/facebook_login_button"
                    style="@style/ButtonRaisedLoginStyle"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_below="@id/Login"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/ripple_button_special_blue"
                    android:drawableStart="@drawable/com_facebook_button_icon_xhdpi"
                    android:onClick="facebookLoginPressed"
                    android:paddingEnd="@dimen/pad_16dp"
                    android:paddingStart="@dimen/pad_16dp"
                    android:text="Sign in with Facebook" />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/pad_16dp"
            android:gravity="bottom">


            <Button
                android:id="@+id/Register"
                style="@style/ButtonFlatLoginStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"

                android:onClick="RegisterPressed"
                android:text="Create account"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_12sp" />

            <Button
                style="@style/ButtonFlatLoginStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"

                android:onClick="ForgotPassword"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_12sp" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>